compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__lists__case.snap
---
source: compiler-core/src/javascript/tests/lists.rs
expression: "\npub fn go(xs) {\n  case xs {\n    [] -> 0\n    [_] -> 1\n    [_, _] -> 2\n    _ -> 9999\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(xs) {
  case xs {
    [] -> 0
    [_] -> 1
    [_, _] -> 2
    _ -> 9999
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function go(xs) {
  if (xs instanceof $Empty) {
    return 0;
  } else {
    let $ = xs.tail;
    if ($ instanceof $Empty) {
      return 1;
    } else if ($.tail instanceof $Empty) {
      return 2;
    } else {
      return 9999;
    }
  }
}
