compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__lists__list_constants_typescript.snap
---
source: compiler-core/src/javascript/tests/lists.rs
expression: "\npub const a = []\npub const b = [1, 2, 3]\n"
---
----- SOURCE CODE

pub const a = []
pub const b = [1, 2, 3]


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export const a: _.List<any>;

export const b: _.List<number>;
