compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__lists__long_list_is_generated_using_to_list_function.snap
---
source: compiler-core/src/javascript/tests/lists.rs
expression: "\npub fn list() {\n  [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n}\n"
---
----- SOURCE CODE

pub fn list() {
  [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}


----- COMPILED JAVASCRIPT
import { toList } from "../gleam.mjs";

export function list() {
  return toList([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]);
}
