compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__lists__long_list_literals.snap
---
source: compiler-core/src/javascript/tests/lists.rs
expression: "\npub fn go() {\n  [111111111111111111111111111111111111111111111111111111111111111111111111]\n  [11111111111111111111111111111111111111111111, 1111111111111111111111111111111111111111111]\n}\n"
---
----- SOURCE CODE

pub fn go() {
  [111111111111111111111111111111111111111111111111111111111111111111111111]
  [11111111111111111111111111111111111111111111, 1111111111111111111111111111111111111111111]
}


----- COMPILED JAVASCRIPT
import { List$Empty$const as $List$Empty$const, prepend as listPrepend } from "../gleam.mjs";

export function go() {
  listPrepend(
    111111111111111111111111111111111111111111111111111111111111111111111111,
    $List$Empty$const,
  );
  return listPrepend(
    11111111111111111111111111111111111111111111,
    listPrepend(1111111111111111111111111111111111111111111, $List$Empty$const),
  );
}
